# tv-automation-casparcg-server

./: CHANGELOG  CMakeLists.txt  README  version.tmpl
accelerator/: StdAfx.h  accelerator.cpp  accelerator.h
accelerator/cpu/image/: image_mixer.cpp  image_mixer.h
accelerator/ogl/image/: image_mixer.cpp  image_mixer.h  (+1 more)
common/: CMakeLists.txt  executor.h  log.cpp  polling_filesystem_monitor.cpp  prec_timer.h  thread_info.h
core/: CMakeLists.txt  StdAfx.h  thumbnail_generator.cpp  thumbnail_generator.h  video_channel.cpp  video_channel.h
core/consumer/: frame_consumer.cpp  frame_consumer.h  output.cpp  output.h  port.cpp  port.h
core/diagnostics/: osd_graph.cpp
core/frame/: draw_frame.cpp  draw_frame.h  frame.cpp  frame.h  frame_visitor.h
core/mixer/: mixer.cpp
core/producer/: cg_proxy.cpp  frame_producer.cpp  layer.cpp  layer.h  stage.cpp  stage.h
modules/: CMakeLists.txt
modules/decklink/: StdAfx.h
modules/ffmpeg/: CMakeLists.txt  StdAfx.h  ffmpeg.cpp
modules/html/: CMakeLists.txt  html.cpp
modules/image/: CMakeLists.txt
modules/oal/: CMakeLists.txt
modules/poco/: CMakeLists.txt  poco.cpp  poco.h
modules/poco/consumer/: poco_consumer.cpp  poco_consumer.h
modules/screen/: CMakeLists.txt
protocol/amcp/: AMCPCommandsImpl.cpp
protocol/cii/: CIIProtocolStrategy.cpp
protocol/osc/: client.cpp  client.h
protocol/util/: AsyncEventServer.cpp
shell/: CMakeLists.txt  casparcg.manifest  main.cpp  server.cpp
src/core/: video_channel.cpp  video_channel.h
src/protocol/: CMakeLists.txt
src/shell/: main.cpp  server.cpp  server.h
(+69 files in other folders)
